<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />

    <item
        android:id="@+id/nav_statistics"
        android:icon="@drawable/ic_transcations"
        android:title="@string/statistics" />

    <item
        android:id="@+id/navAddBtn"
        android:icon="@drawable/ic_add"
        android:title="@string/add"
        />

    <item
        android:id="@+id/nav_budget"
        android:icon="@drawable/ic_statics"
        android:title="@string/nav_budget" />

    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />

</menu>
